修复了部分接口未清除缓存的问题
